# reservation-notifier

./: .env_template  .gitignore  LICENSE  README.md  pyproject.toml  send_test_telegram.py
config/: urls.json
src/reservation_notifier/: checker.py  main.py  notifier.py
tests/: test_checker.py  test_notifier.py
